# smart-contract-wallet

./: LICENSE  README.md  hie.yaml  smart-contract-wallet.cabal
app/: Main.hs
src/ZkFold/: Wallet.hs
src/ZkFold/Symbolic/: Wallet.hs
src/ZkFold/Symbolic/Wallet/: API.hs  Server.hs  Types.hs
src/ZkFold/Symbolic/Wallet/Server/: Types.hs
src/ZkFold/Wallet/: API.hs  Server.hs  SymbolicAPI.hs  Types.hs
src/ZkFold/Wallet/Server/: Types.hs
